--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.2.0",
-    "@nestjs/typeorm": "^10.0.1",
+    "@nestjs/typeorm": "10.0.1",
     "caniuse-lite": "^1.0.30001576",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -41,7 +41,7 @@
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
-    "typeorm": "^0.3.19"
+    "typeorm": "0.3.19"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
