--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "10.0.1",
+    "@types/ioredis": "^5.0.0",
     "caniuse-lite": "^1.0.30001576",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "mysql2": "^3.7.0",
+    "nestjs-redis": "^1.3.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "redis": "^4.6.12",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
