--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "express-session": "^1.18.0",
     "ioredis": "^5.3.2",
     "mysql2": "^3.7.0",
     "nestjs-redis": "^1.3.3",
