--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.0",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "10.0.1",
     "@types/ioredis": "^5.0.0",
@@ -39,6 +40,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "cron": "^3.1.6",
     "express-session": "^1.18.0",
     "ioredis": "^5.3.2",
     "mysql2": "^3.7.0",
