--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "10.0.1",
     "@types/ioredis": "^5.0.0",
+    "base62": "^2.0.1",
     "caniuse-lite": "^1.0.30001576",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -48,11 +49,13 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "punycode.js": "^2.3.1",
     "redis": "^4.6.12",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
-    "typeorm": "0.3.19"
+    "typeorm": "0.3.19",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
