--- a/package.json
+++ b/package.json
@@ -97,5 +97,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": "14.19.3",
+    "npm": "6.14.13"
   }
 }
