--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "10.0.1",
     "@types/ioredis": "^5.0.0",
+    "@types/qrcode": "^1.5.5",
     "base62": "^2.0.1",
     "caniuse-lite": "^1.0.30001576",
     "class-transformer": "^0.5.1",
@@ -50,6 +51,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "punycode.js": "^2.3.1",
+    "qrcode": "^1.5.3",
     "redis": "^4.6.12",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
