--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "cron": "^3.1.6",
+    "exceljs": "^4.4.0",
     "express-session": "^1.18.0",
     "ioredis": "^5.3.2",
     "mysql2": "^3.7.0",
