--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/typeorm": "10.0.1",
     "@types/ioredis": "^5.0.0",
     "@types/qrcode": "^1.5.5",
+    "ali-oss": "^6.20.0",
     "base62": "^2.0.1",
     "caniuse-lite": "^1.0.30001576",
     "class-transformer": "^0.5.1",
@@ -53,6 +54,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "punycode.js": "^2.3.1",
+    "qiniu": "^7.11.0",
     "qrcode": "^1.5.3",
     "redis": "^4.6.12",
     "reflect-metadata": "^0.2.1",
