--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "ali-oss": "^6.20.0",
     "base62": "^2.0.1",
     "caniuse-lite": "^1.0.30001576",
+    "chalk": "^4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "cron": "^3.1.6",
+    "dayjs": "^1.11.10",
     "exceljs": "^4.4.0",
     "express-session": "^1.18.0",
     "ioredis": "^5.3.2",
@@ -62,6 +64,8 @@
     "sharp": "^0.33.2",
     "swagger-ui-express": "^5.0.0",
     "typeorm": "0.3.19",
+    "winston": "^3.12.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
